--- a/src/assets/sass/layout/_itemPanel.scss
+++ b/src/assets/sass/layout/_itemPanel.scss
@@ -14,6 +14,10 @@
         transition: 0.25s linear max-height;
         background-color: #00000055;
     }
+
+    .more {
+        background-color: #00000010;
+    }
 }
 
 .item.selected {
