--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,6 @@
 @import "layout/loadoutMeta";
 @import "layout/itemPanel";
 @import "layout/icon";
+@import "layout/modal";
 
 @import "views/editor";
