--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,6 +1,9 @@
+@import "themes/dark";
+
 @import "layout/loadoutMeta";
 @import "layout/itemPanel";
 @import "layout/icon";
 @import "layout/modal";
+@import "layout/contextMenu";
 
 @import "views/editor";
