Added tabbing and fixed some styles

--- a/assets/styles/landingPage/_sitenav.scss
+++ b/assets/styles/landingPage/_sitenav.scss
@@ -33,7 +33,12 @@ header.sitenav {
                 background-color: black;
             }
 
-            &:hover:not(.active) {
+            &.disabled {
+                opacity: 0.25;
+                cursor: auto;
+            }
+
+            &:hover:not(.active, .disabled) {
                 color: white;
                 background-color: black;
             }
