--- a/assets/styles/landingPage/_main.scss
+++ b/assets/styles/landingPage/_main.scss
@@ -10,6 +10,8 @@ html {
 
 * {
     box-sizing: border-box;
+    transition-property: background-color, border-color;
+    transition-duration: 0.5s;
 }
 
 .app-container {
@@ -18,6 +20,10 @@ html {
 }
 
 .loadouts-page {
+    background-image: linear-gradient(to right, rgba(128, 128, 128, 0.071) 1px, transparent 1px), 
+        linear-gradient(to bottom, rgba(128, 128, 128, 0.071) 1px, transparent 1px);
+    background-size: 24px 24px;
+    
     padding: 0rem 20rem;
 
     div.tabs {
@@ -26,6 +32,7 @@ html {
         display: flex;
 
         button {
+            background-color: rgb(247, 248, 249);
             height: 2.8rem;
             border: 1px solid black;
             flex-grow: 1;
@@ -36,7 +43,13 @@ html {
                 color: white;
             }
 
-            &:hover:not(.active) {
+            &.disabled {
+                color: rgb(214, 214, 214);
+                border-color: rgb(214, 214, 214);
+                cursor: auto;
+            }
+
+            &:hover:not(.active, .disabled) {
                 color: white;
                 background-color: black;
             }
@@ -49,7 +62,6 @@ html {
         align-items: center;
         padding: 1rem;
         width: 100%;
-        height: 20rem;
 
         h1, h2, h3 {
             font-size: 2rem;
@@ -62,6 +74,10 @@ html {
 
         h3 {
             font-size: 1.25rem;
+        }
+
+        &.explore {
+            height: 20rem;
         }
 
         &.popular {
@@ -113,7 +129,7 @@ html {
 
             div.tag {
                 overflow: hidden;
-                background-color: white;
+                background-color: rgb(247, 248, 249);
                 color: black;
                 border: 1px solid black;
                 width: 18.9%;
@@ -129,12 +145,16 @@ html {
             }
 
             div.loadout {
+                background-color: #eeeeee;
                 border: 1px solid black;
                 padding: 0.75rem;
                 border-radius: 1rem;
                 max-width: 25%;
                 display: flex;
                 flex-direction: column;
+                -webkit-box-shadow: 0px 0px 23px -12px rgba(0,0,0,0.75);
+                -moz-box-shadow: 0px 0px 23px -12px rgba(0,0,0,0.75);
+                box-shadow: 0px 0px 23px -12px rgba(0,0,0,0.75);
 
                 div.preview {
                     border-bottom: 1px solid black;
@@ -159,6 +179,11 @@ html {
                     h1 {
                         font-size: 1.5rem;
                         text-align: center;
+                        border-bottom: 1px solid black;
+                    }
+
+                    h1, p {
+                        margin: 0;
                     }
 
                     div.tags {
@@ -172,6 +197,9 @@ html {
                             border: 1px solid black;
                             border-radius: 0.2rem;
                             padding: 0.1rem;
+                            -webkit-box-shadow: 0px 0px 10px -4px rgba(0,0,0,0.75);
+                            -moz-box-shadow: 0px 0px 10px -4px rgba(0,0,0,0.75);
+                            box-shadow: 0px 0px 10px -4px rgba(0,0,0,0.75);
                         }
                     }
                 }
