--- a/assets/styles/arsenal/_item.scss
+++ b/assets/styles/arsenal/_item.scss
@@ -1,12 +1,10 @@
-@import "globals";
-
 .item .tooltip {
     width: 100%;
     display: block;
 }
 
 .arsenal .item, .preview-container .item {
-    background-color: rgba(85, 85, 85, 0.6);
+    background-color: $background;
     margin-bottom: 1px;
     cursor: pointer;
     user-select: none;
@@ -40,11 +38,11 @@
     }
 
     &.selected .title {
-        background-color: rgba(255, 255, 255, 0.25);
+        background-color: $active-background;
     }
 
     & > .body {
-        background-color: rgba(79, 79, 79, 0.6);
+        background-color: $background-100;
         transition: 0.25s linear height;
         padding: 0rem 0.2rem;
         padding-bottom: 0;
@@ -64,8 +62,8 @@
     & > .preview {
         position: absolute;
         top: 0;
-        background-color: rgba(79, 79, 79, 0.6);
-        border: 1px solid black;
+        background-color: $background-100;
+        border: 1px solid $border-color;
         border-radius: 0px 3px 3px 0px;
         border-left: none;
         transition-property: width, height, opacity;
@@ -88,7 +86,7 @@
     
     &.sub-item .preview {
         border-right: none;
-        border-left: 1px solid black;
+        border-left: 1px solid $border-color;
         border-radius: 3px 0px 0px 3px;
         left: auto;
         right: 100%;
@@ -126,7 +124,7 @@
     }
 
     input[type=checkbox]:checked ~ .checkbox-checkmark {
-        background-color: #2196F3;
+        background-color: $foreground;
     }
 
     input[type=checkbox]:checked ~ .checkbox-checkmark:after {
@@ -140,11 +138,11 @@
         width: 1.5rem;
         height: 1.5rem;
         border-radius: 3px;
-        border: 1px solid black;
+        border: 1px solid $border-color;
         background-color: transparent;
 
         &:hover {
-            background-color: rgba(255, 255, 255, 0.25);
+            background-color: $active-background;
         }
 
         &:after {
@@ -156,7 +154,7 @@
             top: 5px;
             width: 5px;
             height: 10px;
-            border: solid white;
+            border: solid $active-border-color;
             border-width: 0 3px 3px 0;
             -webkit-transform: rotate(45deg);
             -ms-transform: rotate(45deg);
