--- a/assets/styles/arsenal/_modal.scss
+++ b/assets/styles/arsenal/_modal.scss
@@ -1,15 +1,13 @@
-@import 'globals';
-
 .arsenal-modal {
     /* Full screen background cover */
     & > div.transition-opacity {
-        background-color: rgba(87, 83, 78, 0.75);
+        background-color: $background;
     }
 
     div.arsenal-modal-body {
-        background-color: rgb(9, 9, 9);
+        background-color: $modal-background;
         color: white;
-        border: 1px solid rgb(0, 0, 0);
+        border: 1px solid $border-color;
         border-radius: 5px;
         padding: 1rem;
         display: flex;
@@ -18,13 +16,13 @@
     }
 
     label {
-        color: white;
+        color: $foreground;
     }
 
     input, select, textarea, [role=button] button {
-        background-color: rgb(24, 24, 24);
+        background-color: $modal-input-background;
         color: white;
-        border: 1px solid rgb(0, 0, 0);
+        border: 1px solid $border-color;
         --tw-ring-inset: none;
   
         &:focus {
@@ -33,37 +31,37 @@
     }
 
     ul[role=listbox] {
-        background-color: rgb(24, 24, 24);
-        border: 1px solid rgb(0, 0, 0);
+        background-color: $modal-input-background;
+        border: 1px solid $border-color;
         --tw-ring-inset: none;
         --tw-bg-opacity: 0;
 
         @include scrollbar;
         
         li {
-            color: white;
+            color: $foreground;
     
             img {
-                background-color: rgba(85, 85, 85, 0.6);
-                border: 1px solid rgb(0, 0, 0);
+                background-color: $background;
+                border: 1px solid $border-color;
                 width: 1.5rem;
             }
     
             &:hover {
-                background-color: rgb(43, 43, 43);
+                background-color: $active-modal-input-background;
             }
 
             &.bg-gray-100 {
-                background-color: rgba(85, 85, 85, 0.6) !important;
+                background-color: $background !important;
             }
         }
     }
 
     div.preview-container {
-        border: 1px dashed rgb(0, 0, 0);
-        background-color: rgb(168, 162, 158);
+        border: 1px dashed $border-color;
+        background-color: $arsenal-background-color;
         background-size: 40px 40px;
-        background-image: radial-gradient(circle, #1c1917 1px, rgba(0, 0, 0, 0) 1px);
+        background-image: radial-gradient(circle, $arsenal-grid-color 1px, rgba(0, 0, 0, 0) 1px);
         border-radius: 5px;
         width: 100%;
         height: 18rem;
