--- a/assets/styles/arsenal/_modal.scss
+++ b/assets/styles/arsenal/_modal.scss
@@ -74,4 +74,50 @@
         display: flex;
         justify-content: space-between;
     }
+
+    .help-doc {
+        h2, h1 {
+            font-weight: 600;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+        }
+
+        h1 {
+            margin-top: 0rem;
+        }
+
+        kbd {
+            background-color: $active-background;
+            padding: 2px 4px;
+            border-radius: 4px;
+            font-weight: 600;
+        }
+
+        table {
+            width: 100%;
+            th {
+                border-bottom: 1px solid $disabled-border-color;
+            }
+
+            td {
+                padding: 0.5rem;
+
+                &:first-child {
+                    text-align: center;
+                }
+
+                &:last-child {
+                    border-left: 1px solid $disabled-border-color;
+                }
+            }
+
+            tr {
+                border-bottom: 1px dashed $disabled-border-color;
+
+                &:last-child {
+                    border-bottom: 1px solid $disabled-border-color;
+                }
+            }
+        }
+    }
 }
