--- a/assets/styles/landingPage/_loadouts-page.scss
+++ b/assets/styles/landingPage/_loadouts-page.scss
@@ -82,7 +82,7 @@
                 justify-content: space-between;
             }
 
-            div.collection, div.tag, div.loadout {
+            div.collection, div.tag, div.loadout, div.loadout-new {
                 border: 1px solid $border-color;
                 padding: 0.75rem;
                 border-radius: 1rem;
@@ -132,10 +132,7 @@
                 display: flex;
                 flex-direction: column;
                 box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
-
-                &:hover {
-                    transform: scale(1.05);
-                }
+                width: 19rem;
 
                 a {
                     margin-top: 1rem;
@@ -195,6 +192,27 @@
                             box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.75);
                         }
                     }
+                }
+            }
+
+            div.loadout-new {
+                background-color: $background;
+                box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
+                width: 19rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                font-size: 3rem;
+
+                &:hover {
+                    transform: scale(1.05);
+                }
+
+                & > .plus-icon {
+                    font-size: 10rem;
+                    line-height: 8rem;
                 }
             }
         }
