Fix issues with loadout creation and added loadout deleting

--- a/assets/styles/landingPage/_colors-dark.scss
+++ b/assets/styles/landingPage/_colors-dark.scss
@@ -10,3 +10,5 @@ $disabled-foreground: rgb(68, 68, 68);
 $border-color: rgb(68, 68, 68);
 $active-border-color: $active-background;
 $disabled-border-color: rgb(68, 68, 68);
+
+$modal-background: rgba(16, 18, 20, 0.65);
