--- a/assets/styles/landingPage/_colors-light.scss
+++ b/assets/styles/landingPage/_colors-light.scss
@@ -10,3 +10,5 @@ $disabled-foreground: rgb(214, 214, 214);
 $border-color: black;
 $active-border-color: black;
 $disabled-border-color: rgb(214, 214, 214);
+
+$modal-background: rgba(247, 248, 249, 0.65);
