--- a/assets/styles/landingPage/_loadouts-page.scss
+++ b/assets/styles/landingPage/_loadouts-page.scss
@@ -132,21 +132,40 @@
                 display: flex;
                 flex-direction: column;
                 box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
-                width: 19rem;
+                width: 24%;
 
-                a {
+                div.actions {
                     margin-top: 1rem;
-                    border-radius: 1rem;
-                    background-color: $background;
-                    border: 1px solid $border-color;
-                    color: $foreground;
-                    padding: 0.5rem 0.75rem;
-                    text-align: center;
+                    display: flex;
+                    justify-content: space-between;
+                    gap: 0.5rem;
 
-                    &:hover {
-                        background-color: $active-background;
-                        color: $active-foreground;
+                    a {
+                        max-width: 50%;
                     }
+
+                    div[data-headlessui-state] {
+                        width: 100%;
+
+                    }
+                    
+                    > button, button.dropdown {
+                        flex-grow: 1;
+                        width: 100%;
+                        border-radius: 1rem;
+                        background-color: $background;
+                        border: 1px solid $border-color;
+                        color: $foreground;
+                        padding: 0.5rem 0.75rem;
+                        text-align: center;
+                        justify-content: center;
+
+                        &:hover {
+                            background-color: $active-background;
+                            color: $active-foreground;
+                        }
+                    }
+
                 }
 
                 div.preview {
@@ -198,7 +217,7 @@
             div.loadout-new {
                 background-color: $background;
                 box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
-                width: 19rem;
+                width: 24%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -215,6 +234,10 @@
                     line-height: 8rem;
                 }
             }
+        }
+
+        .body.reversed {
+            flex-direction: row-reverse;
         }
     }
 }
