Added loadout editing

--- a/assets/styles/arsenal/_modal.scss
+++ b/assets/styles/arsenal/_modal.scss
@@ -4,7 +4,7 @@
         background-color: $background;
     }
 
-    div.arsenal-modal-body {
+    .arsenal-modal-body {
         background-color: $modal-background;
         color: white;
         border: 1px solid $border-color;
