--- a/assets/styles/landingPage/_loadouts-page.scss
+++ b/assets/styles/landingPage/_loadouts-page.scss
@@ -47,6 +47,20 @@
         padding: 1rem;
         width: 100%;
 
+        & > a {
+            border-radius: 0.2rem;
+            border: 1px solid $border-color;
+            margin-top: 1rem;
+            background-color: $background;
+            color: $foreground;
+            padding: 0.5rem 0.75rem;
+
+            &:hover {
+                background-color: $active-background;
+                color: $active-foreground;
+            }
+        }
+
         h1, h2, h3 {
             font-weight: 600;
         }
