--- a/assets/styles/landingPage/main.scss
+++ b/assets/styles/landingPage/main.scss
@@ -14,6 +14,7 @@ html:not(.dark-theme) {
     @import "sitenav";
     @import "modal";
     @import "loadouts-page";
+    @import "components/loadout-details";
 }
 
 html.dark-theme {
@@ -26,6 +27,7 @@ html.dark-theme {
     @import "sitenav";
     @import "modal";
     @import "loadouts-page";
+    @import "components/loadout-details";
 }
 
 * {
