Added tags, fixed bug with categories and added buylist in my content

--- a/assets/styles/landingPage/_colors-dark.scss
+++ b/assets/styles/landingPage/_colors-dark.scss
@@ -1,5 +1,6 @@
 $background: rgb(16, 18, 20);
 $foreground: white;
+$muted-foreground: rgb(141, 141, 141);
 
 $active-background: rgb(222, 228, 234);
 $active-foreground: black;
