--- a/assets/styles/landingPage/_colors-light.scss
+++ b/assets/styles/landingPage/_colors-light.scss
@@ -1,5 +1,6 @@
 $background: rgb(247, 248, 249);
 $foreground: black;
+$muted-foreground: rgb(76, 76, 76);
 
 $active-background: black;
 $active-foreground: white;
