--- a/assets/styles/landingPage/components/_loadout-details.scss
+++ b/assets/styles/landingPage/components/_loadout-details.scss
@@ -8,112 +8,147 @@ div.loadout-details {
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 
   div.body {
-    width: 75%;
-    height: 75%;
+    width: 40%;
+    height: 80%;
     background-color: $background;
     border: 1px solid $border-color;
     border-radius: 0.5rem;
     display: flex;
+    flex-direction: column;
     padding: 1rem;
+    gap: 1rem;
+
+    & > h1 {
+      font-size: 2.5rem;
+      width: 100%;
+      text-align: left;
+      border-bottom: 1px solid $border-color;
+    }
 
     & > div.details {
-      width: 50%;
+      width: 100%;
       flex-grow: 1;
       display: flex;
-      flex-direction: column;
       padding: 0.5rem;
+      border-bottom: 1px solid $border-color;
       gap: 1rem;
 
       header {
-        width: 100%;
-        height: 22rem;
+        width: 50%;
         display: flex;
         flex-direction: column;
 
-        h1 {
-          font-size: 2.5rem;
-          width: 100%;
-          text-align: center;
-          border-bottom: 1px solid $border-color;
-        }
-
         p {
-          height: 10rem;
+          height: 15.5rem;
           border-bottom: 1px solid $border-color;
         }
 
         div.tags {
-          flex-grow: 1;
-          border-bottom: 1px solid $border-color;
-        }
-      }
-
-      section {
-        justify-self: flex-end;
-        border: 1px solid $border-color;
-        padding: 0.5rem;
-        max-height: 16rem;
-        
-        div.comments {
           width: 100%;
-          height: 10rem;
           display: flex;
-          flex-direction: column;
           gap: 0.5rem;
-          overflow-y: scroll;
+          padding-top: 1rem;
 
           & > div {
-            border: 1px solid $border-color;
-            
-            div.author {
-              border-bottom: 1px solid $border-color;
-            }
-
-            div.details {
-              font-size: 0.65rem;
-              text-decoration: underline;
-            }
-
-            div, p {
-              padding: 0.5rem;
-            }
+            color: $muted-foreground;
           }
         }
       }
+
+      & > div.meta {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+        gap: 1rem;
+  
+        & > div.preview {
+          border: 1px dashed black;
+          border-radius: 0.5rem;
+          background: radial-gradient(circle, #1c1917 1px, rgba(0, 0, 0, 0) 1px);
+          background-size: 30px 30px;
+          background-color: rgb(168, 162, 158);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 15rem;
+  
+          img {
+              height: 100%;
+          }
+        }
+
+        div.statistics {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+
+          div {
+            flex-grow: 1;
+            cursor: default;
+
+            &.visibility, &.views, &.likes {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 0.2rem;
+
+              & > span {
+                color: $muted-foreground;
+              }
+            }
+
+            &.likes {
+              cursor: pointer;
+            }
+          }
+        }
+  
+      }
     }
 
-    & > div.meta {
-      width: 50%;
+    div.comments {
+      width: 100%;
       display: flex;
       flex-direction: column;
-      padding: 0.5rem;
-      gap: 1rem;
-      justify-content: space-between;
+      overflow-y: hidden;
 
-      & > div.preview {
-        border: 1px dashed black;
-        border-radius: 0.5rem;
-        background: radial-gradient(circle, #1c1917 1px, rgba(0, 0, 0, 0) 1px);
-        background-size: 30px 30px;
-        background-color: rgb(168, 162, 158);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 22rem;
-
-        img {
-            height: 100%;
-        }
+      & > textarea[name=comment] {
+        border: 1px solid $border-color;
+        background-color: $background;
+        color: $foreground;
+        height: 5rem;
+        margin-bottom: 1rem;
       }
+      
+      & > section {
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        gap: 0.5rem;
 
-      span {
-        width: 100%;
-        text-align: center;
+        @include scrollbar;
+
+        & > div {
+          border: 1px solid $border-color;
+  
+          div.author {
+            border-bottom: 1px solid $border-color;
+          }
+  
+          div.details {
+            font-size: 0.65rem;
+            text-decoration: underline;
+          }
+  
+          div, p {
+            padding: 0.5rem;
+          }
+        }
       }
     }
   }
