--- a/assets/styles/landingPage/components/_loadout.scss
+++ b/assets/styles/landingPage/components/_loadout.scss
@@ -50,13 +50,12 @@ div.loadout {
             border-bottom: 1px solid $border-color;
             display: flex;
             gap: 0.5rem;
-            padding: 0.5rem 0;
+            padding: 0.3rem 0;
 
             div {
-                border: 1px solid $border-color;
+                color: $muted-foreground;
                 border-radius: 0.2rem;
                 padding: 0.1rem;
-                box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.75);
             }
         }
     }
