--- a/assets/styles/landingPage/loadouts/_loadout.scss
+++ b/assets/styles/landingPage/loadouts/_loadout.scss
@@ -7,6 +7,9 @@ div.loadout {
     box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
     width: 24%;
     height: 28rem;
+    border: 1px solid $border-color;
+    padding: 0.75rem;
+    border-radius: 1rem;
 
     div.preview {
         border: 1px dashed black;
