--- a/assets/styles/landingPage/loadouts/main.scss
+++ b/assets/styles/landingPage/loadouts/main.scss
@@ -1,45 +1,4 @@
-.loadouts-page {
-    margin-top: 5rem;
-    min-height: 100%;
-    background: linear-gradient(to right, rgba(128, 128, 128, 0.071) 1px, transparent 1px),
-                linear-gradient(to bottom, rgba(128, 128, 128, 0.071) 1px, transparent 1px);
-    background-size: 24px 24px;
-    padding: 0 20rem;
-
-    * {
-        transition: background-color 0.5s, border-color 0.5s;
-    }
-
-    div.tabs {
-        width: 100%;
-        padding: 1rem;
-        display: flex;
-
-        button {
-            background-color: $background;
-            height: 2.8rem;
-            border: 1px solid $border-color;
-            flex-grow: 1;
-            text-align: center;
-
-            &.active {
-                background-color: $active-background;
-                color: $active-foreground;
-            }
-
-            &.disabled {
-                color: $disabled-foreground;
-                border-color: $disabled-border-color;
-                cursor: auto;
-            }
-
-            &:hover:not(.active, .disabled) {
-                background-color: $background;
-                color: $foreground;
-            }
-        }
-    }
-
+.page-loadouts {
     div.section {
         display: flex;
         flex-direction: column;
