--- a/assets/styles/arsenal/_list-item.scss
+++ b/assets/styles/arsenal/_list-item.scss
@@ -1,10 +1,10 @@
-.item .tooltip {
+.list-item .tooltip {
     width: 100%;
     display: block;
 }
 
-.arsenal .item, .preview-container .item {
-    background-color: $background;
+.list-item, .preview-container .list-item {
+    background-color: $background-100;
     margin-bottom: 1px;
     cursor: pointer;
     user-select: none;
@@ -53,7 +53,7 @@
         }
     }
 
-    &.selected .title {
+    &.selected > .title {
         background-color: $active-background;
     }
 
@@ -63,68 +63,27 @@
         padding: 0rem 0.2rem;
         padding-bottom: 0;
         font-size: 0.75rem;
-        overflow-y: auto;
+        overflow-y: scroll;
         cursor: auto;
         height: 0px;
 
         @include scrollbar(0.3rem);
     }
 
-    &.selected .body {
+    &.selected > .body {
         padding: 0.5rem;
         height: 6rem;
     }
 
-    & > .preview {
-        position: absolute;
-        top: 0;
-        background-color: $background-100;
-        border: 1px solid $border-color;
-        border-radius: 0px 3px 3px 0px;
-        border-left: none;
-        transition-property: width, height, opacity;
-        transition-duration: 0.25s;
-        transition-timing-function: linear;
-        opacity: 0;
-        height: 4rem;
-        width: 4rem;
-        left: 100%;
-
+    .title > .preview {
+        width: 50px;
         img {
-            object-fit: contain;
-            transition-property: height;
-            transition-duration: 0.25s;
-            transition-timing-function: linear;
-            height: 4rem;
-            width: 10rem;
-        }
-    }
-    
-    &.sub-item .preview {
-        border-right: none;
-        border-left: 1px solid $border-color;
-        border-radius: 3px 0px 0px 3px;
-        left: auto;
-        right: 100%;
-    }
-
-    &:hover .preview {
-        opacity: 1;
-    }
-
-    &.selected .preview {
-        width: 10rem;
-        height: 10rem;
-        opacity: 1;
-
-        img {
-        height: 10rem;
-        width: 10rem;
+            width: 100%;
         }
     }
 }
 
-.item .checkbox {
+.list-item .checkbox {
     position: relative;
     display: block;
     width: 1.5rem;
