--- a/assets/styles/arsenal/_list-category.scss
+++ b/assets/styles/arsenal/_list-category.scss
@@ -40,18 +40,14 @@
 
     & > .body {
         background-color: $background;
-        transition: 0.25s linear height;
-        padding: 0rem 0rem;
-        padding-bottom: 0;
+        transition: 0.25s linear height, 0.25s linear min-height;
+        padding: 0rem;
         font-size: 0.75rem;
         overflow-y: auto;
         cursor: auto;
+        min-height: 0px;
         height: 0px;
 
         @include scrollbar(0.3rem);
-    }
-
-    &.selected > .body {
-        padding: 0.1rem;
     }
 }
