--- a/assets/styles/arsenal/_arsenal.scss
+++ b/assets/styles/arsenal/_arsenal.scss
@@ -48,7 +48,10 @@
         .panel {
             background-color: $background;
             border: 1px solid $border-color;
+            overflow-y: auto;
             height: 100%;
+
+            @include scrollbar(0.3rem);
     
             & > .title {
                 padding: 0.15rem;
