--- a/assets/styles/arsenal/_list-item.scss
+++ b/assets/styles/arsenal/_list-item.scss
@@ -101,9 +101,11 @@
     }
 
     .title > .preview {
-        width: 50px;
+        width: 60px;
+        height: 60px;
         img {
-            width: 100%;
+            max-height: 100%;
+            max-width: 100%;
         }
     }
 }
