--- a/assets/styles/arsenal/_item.scss
+++ b/assets/styles/arsenal/_item.scss
@@ -10,6 +10,8 @@
     user-select: none;
     position: relative;
     overflow: visible;
+    width: 100%;
+    
 
     .title {
         padding: 1.25rem 0.5rem 1.25rem 1rem;
@@ -66,6 +68,10 @@
         overflow-y: auto;
         cursor: auto;
         height: 0px;
+
+        word-wrap: break-word;
+        word-break: break-word;
+        white-space: normal;
 
         @include scrollbar(0.3rem);
     }
